--- a/PhotoNg/frontend/Main.html
+++ b/PhotoNg/frontend/Main.html
@@ -10,4 +10,25 @@
         </div>
     </div>
     </div>
+
+    <div class="modal" id="exampleModal"  aria-hidden="true" style="z-index: 12">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    asdasdasdasdasd
+                    asd
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" ng-click="visibleModal(0)">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
