--- a/PhotoNg/frontend/PhotoIndex.html
+++ b/PhotoNg/frontend/PhotoIndex.html
@@ -16,15 +16,15 @@
 <body>
 
 <div ng-controller="HeaderController">
-        <div ng-include="'Header.html'" class="fixed-top" style="height: 100px;border: 2px solid rebeccapurple;background: #ffffff"></div>
+        <div id="Header" ng-include="'Header.html'" class="fixed-top" style="height: 100px;border: 2px solid rebeccapurple;background: #ffffff"></div>
 </div>
 
 <div ng-controller="NavigationController">
-    <div ng-include="'Navigation.html'" class="fixed-top" style="margin-top: 100px"></div>
+    <div id="Navigation" ng-include="'Navigation.html'" class="fixed-top" style="margin-top: 100px"></div>
 </div>
 
 <div ng-controller="MainController">
-    <div ng-include="'Main.html'" ></div>
+    <div id="Main" ng-include="'Main.html'" ></div>
 </div>
 
 </body>
